[package]
name = "crosshair_switcher"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "crosshair-switcher"
path = "src/main.rs"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1.0.58"
fltk = { version = "1.3.10", features = ["fltk-bundled"] }
fltk-theme = { path = "fltk-theme"}
image = { version ="=0.22.4", features = ["png_codec"] }
json = "0.12.4"
vtf = "=0.1.3"

[dev-dependencies]
tempfile = "3.3.0"
